# Mood-Mix

./: CMakeLists.txt  DataAccess.cpp  DataAccess.h  Main.qml  README.md  htrie_map.h  main.cpp  songmanager.cpp  songmanager.h
Components/: Attribute.qml  Info.qml  Search.qml  TimeCompare.qml
